2015-09-12  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* src/lib/libpresage.map, src/lib/presage.cpp, src/lib/presage.h,
	bindings/csharp/presage.net/IPresage.cs,
	bindings/csharp/presage.net/Presage.cs,
	bindings/csharp/presage_csharp_demo/presage_csharp_demo.cs,
	bindings/csharp/presage_wcf_service/IPresageService.cs,
	bindings/csharp/presage_wcf_service/PresageService.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.Designer.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.resx:
	add version() to API to retrieve presage release version.

2015-09-05  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* resources/profiles/presage.xml.template
	src/lib/core/defaultProfile.cpp
	src/lib/predictors/dbconnector/databaseConnector.cpp
	src/lib/predictors/dbconnector/databaseConnector.h
	src/lib/predictors/smoothedNgramPredictor.cpp
	src/lib/predictors/smoothedNgramPredictor.h
	test/lib/predictors/dbconnector/databaseConnectorTest.cpp
	test/lib/predictors/dbconnector/databaseConnectorTest.h
	test/lib/predictors/dbconnector/sqliteDatabaseConnectorTest.cpp
	test/lib/predictors/newSmoothedNgramPredictorTest.cpp
	test/lib/predictors/smoothedNgramPredictorTest.cpp
	test/lib/predictors/smoothedNgramPredictorTest.h: add
	COUNT_THRESHOLD configuration variable to smoothed n-gram
	predictor to select suggestions that have a count greater than or
	equal the value specified.

2015-09-02  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* doc/INSTALL_MSYS2_dev_env.txt: update info on how to setup MSYS2
	developer environment. MSYS2 is now the preferred Windows dev env.

	* packaging/windows/presage_installer.nsi
	packaging/windows/win-buildpackage.sh: update packaging for the
	MSYS2 Windows dev env.

	* bindings/csharp/deploy.cmd: added script to ease Windows
	building and packaging.
